[tool.poetry]
name = "iot_spy"
version = "0.1.0"
description = ""
authors = ["DrX <xenia.mountrouidou@networktocode.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"
black = "^21.8b0"
pytest = "^6.2.5"
pylint = "^2.11.1"
flake8 = "^3.9.2"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
